Fixed overlap issue with file browser header

--- a/style/file-browser.css
+++ b/style/file-browser.css
@@ -11,7 +11,7 @@
 
 .file-browser-menu {
 	font-size: 10px;
-	height: 20px;
+	height: 40px;
 	padding: 5px 5px;
 }
 
